Feedback 반영 1 - RESTful하게 URI와 method를 사용하고 있는가? - 중복된 코드를 모듈/파일로 분리하여 처리를 하는가? - 하나의 함수에 하나의 역할만 담당하도록 구현했는가? - 보안에 취약한 쿼리(예: SQL Injection)가 발생하지 않도록 처리를 하는가?
상품 리스트 조회시 기존에는 카테고리별로 url을 부여했지만 메인페이지에서 query parameter로 카테고리 리스트를 조회하는 형식으로 수정.
상품 등록시 기능별/카테고리별 유효성 검사를 모듈화.
이 후부터는 카테고리별 필터링 기능을 모듈화 할 예정

--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -31,26 +31,28 @@
 </div>
 
 <h5 align="center">
-  {% if products.has_previous %}
-  <a class="btn btn-primary" role="button" href="/cars/?page={{ products.previous_page_number }}">이전</a>
+  {% if page_obj.has_previous %}
+  <a class="btn btn-primary" role="button"
+    href="/?page={{ page_obj.previous_page_number }}{% if category %}&category={{ category }}{% endif %}">이전</a>
   {% else %}
-  <button class="btn" disabled>이전</button>
+  <button class="btn" disabled>다음</button>
   {% endif %}
 
-  {% if products %}
-  Page {{ products.number }} of {{ products.paginator.num_pages }}
+  {% if page_obj %}
+  Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
   {% else %}
   Page 1 of 1
   {% endif %}
 
-  {% if products.has_next %}
-  <a class="btn btn-primary" role='button' href="/cars/?page={{ products.next_page_number }}">다음</a>
+  {% if page_obj.has_next %}
+  <a class="btn btn-primary" role="button"
+    href="/?page={{ page_obj.next_page_number }}{% if category %}&category={{ category }}{% endif %}">다음</a>
   {% else %}
   <button class="btn" disabled>다음</button>
   {% endif %}
 </h5>
 
-<form action="{% url 'products:car_list' %}" method="get">
+<form method="get">
   <div class="modal fade" id="section-filter" tabindex="-1" role="dialog" data-controller="design"
     data-action="modal_example" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-filter" role="document">
