--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -7,8 +7,7 @@
 {% block content %}
 <nav class="navbar nav-global fixed-top navbar-expand-sm">
 	<div class="container">
-		<a class="navbar-brand"
-			href="{% if product.category.name == '차량' %}{% url 'products:car_list' %}{% else %}{% url 'products:home' %}{% endif %}">
+		<a class="navbar-brand" href="{% url 'products:home' %}">
 			<i class="material-icons ic-filter">arrow_back_ios</i>뒤로
 		</a>
 		<ul class="navbar-nav ml-auto">
