Feedback 반영 2 - 중복된 코드를 모듈/파일로 분리하여 처리를 하는가? - 하나의 함수에 하나의 역할만 담당하도록 구현했는가? - 보안에 취약한 쿼리(예: SQL Injection)가 발생하지 않도록 처리를 하는가? - 각 속성의 validation을 설정했는가?
1. 모든 상품 리스트를 조회하는 페이지와 카테고리별 상품 리스트를 조회하는 컨트롤러를 분리.
2. 기존의 코드에서는 모든상품 또는 카테고리별 상품을 조회하고 필터링을 적용했을시 컨트롤러와 url이 무거워져 유지보수가 힘들고 확장성과 가독성이 떨어질 수 있음.
3. 필터링 폼의 유효성 검사와 db 필터링 하는 기능을 담당하는 모든 코드를 모듈화 함
4. 필터링이 적용된 상태에서 페이지네이터를 통해 이동시 query parameter를 custom templatetag를 정의해 해결
5. 차량 테이블의  연식, 주행거리의 기본 값을 모델에 정의해 중복되는 코드를 제거

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 
   <div class="categories-group">
     {% for cat_eng, cat_kor in categories.items %}
-    <a href="{% url 'products:home' %}?category={{ cat_eng }}" class="btn btn-category">{{ cat_kor }}</a>
+    <a href="{% url 'products:category_list' cat_eng %}" class="btn btn-category">{{ cat_kor }}</a>
     {% endfor %}
   </div>
 
